Remove `display-block` to avoid content cut off

--- a/app/assets/stylesheets/content/work_packages/inplace_editing/_edit_fields.sass
+++ b/app/assets/stylesheets/content/work_packages/inplace_editing/_edit_fields.sass
@@ -85,10 +85,6 @@
   &.inplace-edit .custom-option:not(.-multiple-lines)
     display: inline
 
-// Full width container
-.wp-table--cell-container
-  display: inline-block
-
 // Editable fields cursor
 .-editable .wp-table--cell-span,
 .wp-table--cell-span.-editable
